# simple-metaplex

./: .env  Cargo.toml
src/: main.rs
