[package]
name = "simple-metaplex"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.14.18"
solana-program = "1.14.18"
solana-sdk = "1.14.18"
mpl-token-metadata = "4.1.2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
mpl-core = "0.8.0"
